test/corpus/modules.txt
==================
Empty Module
==================

module default {}

---

(source_file
  (module
    (identifier)
    (schema_declarations)))

==================
Module with single declaration
==================

module default {
    type Movie {}
}

---

(source_file
  (module
    (identifier)
    (schema_declarations
      (object_type
        (identifier)
        (declarations)))))

==================
Module with multiple declarations
==================

module default {
    type Movie {}
    type Review {}
}

---

(source_file
  (module
    (identifier)
    (schema_declarations
      (object_type
        (identifier)
        (declarations))
      (object_type
        (identifier)
        (declarations)))))

==================
Nested module
==================

module default {
    module nested {
    }
}

---

(source_file
  (module
    (identifier)
    (schema_declarations
      (module
        (identifier)
        (schema_declarations)))))
